tests/fixtures/guardrails/invalid/route-member-imports-domain/app/routes/products.ts
const targets = {
  domain: "~/domain/billing/entitlement-state.mjs",
};

export async function action() {
  return import(targets.domain);
}
